@@ -1,5 +1,10 @@
 2010-07-03  Alan Modra  <amodra@gmail.com>
 
+	* ppc.h (PPC_OPCODE_32, PPC_OPCODE_BOOKE64, PPC_OPCODE_CLASSIC): Delete.
+	Renumber other PPC_OPCODE defines.
+
+2010-07-03  Alan Modra  <amodra@gmail.com>
+
 	* ppc.h (PPC_OPCODE_COMMON): Expand comment.
 
 2010-06-29  Alan Modra  <amodra@gmail.com>
